--- a/server/docker-compose.dev.yml
+++ b/server/docker-compose.dev.yml
@@ -1,13 +1,13 @@
 services:
   postgres:
     image: postgres:17
-    container_name: postgres_dev
+    container_name: ottrip_pg_dev
     environment:
       - POSTGRES_USER=${POSTGRES_USER:?error}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:?error}
       - POSTGRES_DB=${POSTGRES_DB:?error}
     ports:
-      - "5432:5432"
+      - "5431:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
