--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "fastapi[standard]>=0.115.11",
     "greenlet>=3.1.1",
     "httpx>=0.28.1",
+    "openai>=1.59.0",
     "passlib>=1.7.4",
     "psycopg[binary,pool]>=3.2.6",
     "pydantic-settings>=2.8.1",
